# gst-krisp-audio

./: .clang-format  README.md  meson.build  meson_options.txt  sdk_cmd.py
src/: gstkrisp.cpp  gstkrisp_common.cpp  gstkrisp_common.hpp  gstkrispaccent.cpp  gstkrispaccent.hpp  gstkrispnc.cpp  gstkrispnc.hpp  krisp_session.hpp  meson.build
tests/: meson.build  test_pipeline.cpp  test_unit.cpp
